--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -1,11 +1,12 @@
+@import './../../assets/style/variables.scss';
+@import './../../assets/style/mixins.scss';
+
 .slider {
     position: relative;
 
     &__active-picture {
         height: 255px;
         width: 100%;
-        /* transform: scale(1);
-        transition: transform 300ms; */
 
         /*   @include media-query(small) {
             height: 295px;
@@ -24,16 +25,11 @@
         } */
     }
 
-    /* &__inactive-picture {
-        transform: scale(1.05);
-        transition: transform 300ms;
-    } */
-
     &__picture {
         width: inherit;
         height: inherit;
         object-fit: cover;
-        border-radius: 10px;
+        border-radius: $border-radius-s;
 
         /*  @include media-query(small) {
             border-radius: 15px;
@@ -51,10 +47,8 @@
     &__previous,
     &__next {
         position: absolute;
-        top: 0;
-        height: 100%;
-        display: flex;
-        align-items: center;
+        top: 50%;
+        transform: translate(0% ,-50%);
     }
 
     &__next {
@@ -84,20 +78,6 @@
 
         @include media-query(large) {
             height: 50px;
-        } */
-    }
-
-    &__counter {
-        display: none;
-
-        /* @include media-query(large) {
-            display: block;
-            color: $white;
-            position: absolute;
-            bottom: 25px;
-            font-weight: 500;
-            left: 50%;
-            filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.5));
         } */
     }
 }
