--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -1,31 +1,22 @@
-@import "../../assets/scss/variables.scss";
+@import './../../assets/style/variables.scss';
+@import './../../assets/style/mixins.scss';
 
 .wrapper-banner {
     position: relative;
-    margin: 0px 100px;
+    margin: 0px 5%;
 
     &__img {
         width: 100%;
         height: 110px;
         object-fit: cover;
-        object-position: -100% 50%;
-        border-radius: 10px;
-    }
-
-    &__background {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 110px;
-        background-color: rgba(0, 0, 0, 0.4);
+        border-radius: $border-radius-s;
     }
 
     &__title {
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(0%, -50%);
+        transform: translate(-50%, -50%);
         color: $font-color-light;
     }
 }
