--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -1,2 +1,43 @@
-/* @import './../../assets/scss/variables.scss';
-@import './../../assets/scss/mixins.scss'; */
+@import './../../assets/style/variables.scss';
+@import './../../assets/style/mixins.scss';
+
+.collapse {
+    &__content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: $color-primary;
+        border-radius: 7px;
+        color: white;
+        padding: 10px;
+
+        &--margin {
+            margin-bottom: 31px;
+        }
+    }
+
+    &__arrow {
+        width: auto;
+        height: 10px;
+
+        &--rotate {
+            transform: rotate(180deg);
+            transition: transform 300ms;
+        }
+
+    }
+
+    &__text {
+        display: flex;
+        flex-direction: column;
+        background-color: $color-secondary;
+        border-radius: 7px;
+        padding: 30px 20px;
+        max-height: 100%;
+        margin-bottom: 31px;
+    }
+
+    &__hide {
+        display: none;
+    }
+}
