--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,10 +1,9 @@
-@import './../../assets/scss/variables.scss';
+@import './../../assets/style/variables.scss';
 
 .header {
-    margin: 0 100px;
+    margin: 0 5%;
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
     justify-content: space-between;
     align-items: center;
 
