--- a/src/components/Rate/Rate.scss
+++ b/src/components/Rate/Rate.scss
@@ -1,5 +1,5 @@
-@import './../../assets/scss/variables.scss';
-@import './../../assets/scss/mixins.scss';
+@import './../../assets/style/variables.scss';
+@import './../../assets/style/mixins.scss';
 
 .rating {
     display: flex;
