--- a/src/index.scss
+++ b/src/index.scss
@@ -20,11 +20,11 @@ body {
 .wrapper {
   margin: 1rem;
 
-  /* @include breakpoint(m) {
+  /* @include media-query (m) {
     margin: 1rem 2rem;
   }
 
-  @include breakpoint(xxl) {
+  @include media-query (xxl) {
     max-width: 1440px;
     margin: 1.5rem auto;
   } */
@@ -42,7 +42,7 @@ h1 {
   font-size: 1.5rem;
   font-weight: 500;
 
-  /* @include breakpoint(xl) {
+  /* @include media-query (xl) {
     font-size: 2rem;
   } */
 }
@@ -53,7 +53,7 @@ h2 {
   font-size: 1.3rem;
   font-weight: 500;
 
-  /* @include breakpoint(xl) {
+  /* @include media-query (xl) {
     font-size: 1.6rem;
   } */
 }
@@ -78,8 +78,8 @@ button {
   -webkit-font-smoothing: inherit;
   -moz-osx-font-smoothing: inherit;
 
-  /* Corrects inability to style clickable `input` types in iOS */
-  -webkit-appearance: none;
+  /* Corrects inability to style clickable `input` types in iOS
+  -webkit-appearance: none; */
 }
 
 p {
@@ -90,4 +90,5 @@ p {
 ul,
 li {
   text-decoration: none;
+  list-style: none;
 }
