--- a/src/pages/Apartment/Apartment.scss
+++ b/src/pages/Apartment/Apartment.scss
@@ -1,5 +1,4 @@
 @import './../../assets/style/variables.scss';
-@import './../../assets/style/mixins.scss';
 
 .apartment {
     margin: 0 5%;
@@ -63,7 +62,7 @@
     }
 
     &__dropdowns {
-        @include media-query(m) {
+       /*  @include media-query(m) {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             column-gap: 40px;
@@ -71,7 +70,7 @@
 
         @include media-query(l) {
             column-gap: 80px;
-        }
+        } */
         &__list {
             padding-bottom: 5px;
         }
