fix : media queries and deletion of comments

--- a/src/components/ApartmentTag/ApartmentTag.scss
+++ b/src/components/ApartmentTag/ApartmentTag.scss
@@ -1,36 +1,26 @@
-@import './../../assets/style/variables.scss';
+@import "./../../assets/style/variables.scss";
 
 .tag {
-    background: $color-primary;
-    border-radius: $border-radius-xs;
-    color: $color-secondary;
-    padding: 3px 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    min-width: 68px;
-    text-align: center;
+  background: $color-primary;
+  border-radius: $border-radius-s;
+  color: $color-secondary;
+  padding: 5px 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  min-width: 68px;
+  text-align: center;
 
-    /* @include media-query(s) {
-        padding: 4px 12px;
-        border-radius: 7px;
+  &__text {
+    margin: 0;
+    font-size: 14px;
+    font-weight: 500;
+
+    @media (max-width: 992px) {
+      font-size: 12px;
     }
 
-    @include media-query(l) {
-        padding: 5px 14px;
-        border-radius: 10px;
-    } */
-
-    &__text {
-        margin: 0;
-        font-size: 10px;
-        font-weight: 500;
-
-        /* @include media-query(s) {
-            font-size: 12px;
-        }
-
-        @include media-query(l) {
-            font-size: 14px;
-        } */
+    @media (max-width: 768px) {
+      font-size: 10px;
     }
+  }
 }
