--- a/src/components/ApartmentCard/ApartmentCard.scss
+++ b/src/components/ApartmentCard/ApartmentCard.scss
@@ -1,17 +1,19 @@
 @import './../../assets/style/variables.scss';
-@import './../../assets/style/mixins.scss';
 
 .article {
     position: relative;
-    width: 340px;
+    width: calc(100%);
     height: 340px;
-    margin: 25px 30px;
     display: flex;
     align-items: flex-end;
 
-    /*  @media (min-width: 768px) {
-        min-height: 255px;
-    } */
+     @media (max-width: 1150px) {
+            max-height: 280px;
+        }
+
+    @media (max-width: 992px) {
+            max-height: 255px;
+        }
 
     &__image {
         // Positionnement par-dessus le relative
@@ -30,6 +32,7 @@
     &__title {
         padding: 1.5rem 2rem 1.5rem 1rem;
         width: 100%;
+        height: 25%;
         // 0.5 pour jouer sur la transparence
         background-color: rgba(0, 0, 0, 0.5);
         // Pour l'ordre de la superposition
@@ -37,5 +40,7 @@
         color: $font-color-light;
         border-radius: 0 0 $border-radius-s $border-radius-s;
         font-weight: bold;
+        font-size: small;
+            text-align: center;
     }
 }
