--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -1,4 +1,4 @@
-@import './../../assets/style/variables.scss';
+@import "./../../assets/style/variables.scss";
 
 .wrapper-banner {
     position: relative;
@@ -17,5 +17,7 @@
         left: 50%;
         transform: translate(-50%, -50%);
         color: $font-color-light;
+
+        @media (max-width: 768px) {}
     }
 }
