--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,59 +1,51 @@
-@import './../../assets/style/variables.scss';
+@import "./../../assets/style/variables.scss";
 
 .header {
-    margin: 0 5%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+  margin: 0 5%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 
-    /* @include breakpoint(m) {
-        margin: 0 0 1rem 0;
-    } */
+  &__logo {
+    .logo {
+      max-width: 150px;
 
-    &__logo {
-        .logo {
-            max-width: 100px;
-
-            /*  @include breakpoint(m) {
-                max-width: 140px;
-            }
-
-            @include breakpoint(xxl) {
-                max-width: 150px;
-            } */
-        }
+      @media (max-width: 992px) {
+        max-width: 130px;
+      }
+      @media (max-width: 768px) {
+        max-width: 100px;
+      }
     }
+  }
 
-    &__nav {
-        .nav-link {
-            margin-left: 1rem;
-            font-size: 1rem;
-            color: $color-primary;
-            position: relative;
+  &__nav {
+    .nav-link {
+      margin-left: 1rem;
+      font-size: 24px;
+      color: $color-primary;
+      position: relative;
 
-            /* @include breakpoint(m) {
-                font-size: 1.5rem;
-                margin-left: 3rem;
-            } */
+      @media (max-width: 992px) {
+        font-size: 18px;
+      }
+      @media (max-width: 768px) {
+        font-size: 12px;
+      }
 
-            &::after {
-                content: '';
-                position: absolute;
-                width: 100%;
-                transform: scaleX(0);
-                height: 2px;
-                bottom: 0;
-                left: 0;
-                background-color: $color-primary;
-                transform-origin: bottom right;
-                transition: transform 0.25s ease-out;
-            }
+      &::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        bottom: 0;
+        left: 0;
+        background-color: $color-primary;
+      }
 
-            &:hover::after {
-                transform: scaleX(1);
-                transform-origin: bottom left;
-            }
-        }
+      &:hover::after {
+        height: 2px;
+      }
     }
+  }
 }
