--- a/src/components/Rate/Rate.scss
+++ b/src/components/Rate/Rate.scss
@@ -1,18 +1,20 @@
-@import './../../assets/style/variables.scss';
+@import "./../../assets/style/variables.scss";
 
 .rating {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 
-    &__icon {
-        margin-right: 5px;
+  &__icon {
+    margin-left: 5px;
 
-        /* @include media-query(m) {
-            height: 24px;
-        }
-
-        @include media-query(l) {
-            height: 30px;
-        } */
+    @media (max-width: 992px) {
+      width: 25px;
+      height: auto;
     }
+
+    @media (max-width: 768px) {
+      width: 15px;
+      height: auto;
+    }
+  }
 }
