--- a/src/pages/NoMatch/NoMatch.scss
+++ b/src/pages/NoMatch/NoMatch.scss
@@ -8,32 +8,41 @@
     text-align: center;
     padding: 10rem 0;
 
-    /* @include media-query(xl) {
-        margin-top: 4rem;
-    } */
-
     &__number {
         font-weight: bold;
-        font-size: 10rem;
+        font-size: 288px;
 
-        /* @include media-query(xl) {
-            font-size: 8rem;
-        } */
+        @media (max-width: 992px) {
+            font-size: 200px;
+        }
+
+        @media (max-width: 768px) {
+            font-size: 96px;
+        }
     }
 
     &__msg {
         margin: 1rem 0 5rem 0;
         font-weight: 500;
+        font-size: 36px;
 
-        /* @include media-query(xl) {
-            margin: 1rem 0 5rem 0;
-            font-size: 1.5rem;
-        } */
+        @media (max-width: 992px) {
+            font-size: 25px;
+        }
+
+        @media (max-width: 768px) {
+            font-size: 18px;
+        }
     }
 
     &__back-link {
         text-decoration: underline;
         color: $color-primary;
+        font-size: 18px;
+
+        @media (max-width: 768px) {
+            font-size: 14px;
+        }
 
         &:hover,
         &:focus,
