--- a/src/index.scss
+++ b/src/index.scss
@@ -3,31 +3,13 @@
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Montserrat', 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Montserrat', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-/* code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-*/
-.wrapper {
-  margin: 1rem;
-
-  /* @include media-query (m) {
-    margin: 1rem 2rem;
-  }
-
-  @include media-query (xxl) {
-    max-width: 1440px;
-    margin: 1.5rem auto;
-  } */
+  max-width: 1440px;
+  margin:auto;
 }
 
 a {
@@ -39,23 +21,11 @@ a {
 h1 {
   margin: 0;
   padding: 0;
-  font-size: 1.5rem;
-  font-weight: 500;
-
-  /* @include media-query (xl) {
-    font-size: 2rem;
-  } */
 }
 
 h2 {
   margin: 0;
   padding: 0;
-  font-size: 1.3rem;
-  font-weight: 500;
-
-  /* @include media-query (xl) {
-    font-size: 1.6rem;
-  } */
 }
 
 button {
@@ -64,8 +34,6 @@ button {
   padding: 0;
   width: auto;
   overflow: visible;
-
-  background: transparent;
 
   /* inherit font & color from ancestor */
   color: inherit;
@@ -78,8 +46,6 @@ button {
   -webkit-font-smoothing: inherit;
   -moz-osx-font-smoothing: inherit;
 
-  /* Corrects inability to style clickable `input` types in iOS
-  -webkit-appearance: none; */
 }
 
 p {
