--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,38 +1,32 @@
-@import './../../assets/style/variables.scss';
-@import './../../assets/style/mixins.scss';
+@import "./../../assets/style/variables.scss";
 
 .main {
-    /* position: relative; */
-    margin: 43px 5%;
-    padding: 26px 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    gap: 30px;
+    margin: 5%;
+    padding: 35px 15px;
     background-color: $color-secondary;
     border-radius: 10px;
 
-    /* @include media-query(s) {
+    @media (max-width: 768px) {
         background-color: white;
-        padding: 0px 20px;
-        margin: 0px 5%;
-    } */
+        padding: 0px;
+    }
 
-    .article-link {
-        border-radius: 10px;
-        margin: 1rem 0 0 0;
-        width: 100%;
+    &__link {
+        display: block;
+        width: calc(33% - 40px);
 
-        /*  @include breakpoint(l) {
-            border-radius: $border-radius-lg;
-            margin: 1rem 0 0 0;
-            padding: 0 1rem 0 1rem;
-            width: calc(50% - 2.5rem);
+        @media (max-width: 992px) {
+            width: calc(50% - 40px);
         }
-        @include breakpoint(xxl) {
-            border-radius: $border-radius-lg;
-            margin: 1rem 0 0 0;
-            padding: 0 0.75rem 0 0.75rem;
-            width: calc(33.33333% - 1.5rem);
-        } */
+
+        @media (max-width: 768px) {
+            width: 100%;
+
+
+        }
     }
 }
