--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -1,23 +1,39 @@
 @import "./../../assets/style/variables.scss";
 
 .wrapper-banner {
-    position: relative;
-    margin: 0px 5%;
+  position: relative;
+  margin: 0px 100px;
+  
+  @media (max-width: 768px) {
+    margin: 0 20px;
+  }
 
-    &__img {
-        width: 100%;
-        height: 110px;
-        object-fit: cover;
-        border-radius: $border-radius-s;
+  &__img {
+    width: 100%;
+    height: 110px;
+    object-fit: cover;
+    border-radius: $border-radius-s;
+  }
+
+  &__background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 110px;
+    border-radius: $border-radius-s;
+    background-color: rgba(0, 0, 0, 0.2);
+  }
+
+  &__title {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: $font-color-light;
+    @media (max-width: 768px) {
+      padding-right: 75px;
+      left: 40%;
     }
-
-    &__title {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: $font-color-light;
-
-        @media (max-width: 768px) {}
-    }
+  }
 }
