--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,32 +1,32 @@
 @import "./../../assets/style/variables.scss";
 
 .main {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 30px;
-    margin: 5%;
-    padding: 35px 15px;
-    background-color: $color-secondary;
-    border-radius: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+  margin: 30px 100px;
+  padding: 35px 15px;
+  background-color: $color-secondary;
+  border-radius: 10px;
+
+  @media (max-width: 768px) {
+    margin: 20px 20px;
+    background-color: white;
+    padding: 0px;
+    gap: 25px;
+  }
+
+  &__link {
+    display: block;
+    width: calc(33% - 40px);
+
+    @media (max-width: 992px) {
+      width: calc(50% - 40px);
+    }
 
     @media (max-width: 768px) {
-        background-color: white;
-        padding: 0px;
+      width: 100%;
     }
-
-    &__link {
-        display: block;
-        width: calc(33% - 40px);
-
-        @media (max-width: 992px) {
-            width: calc(50% - 40px);
-        }
-
-        @media (max-width: 768px) {
-            width: 100%;
-
-
-        }
-    }
+  }
 }
