--- a/src/components/ApartmentCard/ApartmentCard.scss
+++ b/src/components/ApartmentCard/ApartmentCard.scss
@@ -30,9 +30,12 @@
     }
 
     &__title {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         padding: 1.5rem 2rem 1.5rem 1rem;
         width: 100%;
-        height: 25%;
+        height: 28%;
         // 0.5 pour jouer sur la transparence
         background-color: rgba(0, 0, 0, 0.5);
         // Pour l'ordre de la superposition
@@ -40,7 +43,11 @@
         color: $font-color-light;
         border-radius: 0 0 $border-radius-s $border-radius-s;
         font-weight: bold;
-        font-size: small;
+        font-size: medium;
         text-align: center;
+
+        @media (max-width: 1120px) {
+            font-size: small;
+        }
     }
 }
